# WebServer

./: CGI.cpp  CGI.hpp  CMakeLists.txt  ChunkedRequest.cpp  ChunkedRequest.hpp  Client.cpp  Client.hpp  Makefile  Parser.cpp  Parser.hpp  README.md  Server.cpp  Server.hpp  WebServer.cpp  WebServer.hpp  ff  main.cpp  test.conf  test1.conf  webserv  webserv.conf
HTTP/: AutoIndex.cpp  HttpRequest.cpp  HttpRequest.hpp  HttpResponse.cpp  HttpResponse.hpp
configs/: default.conf  oursite.conf  tester.conf
dswdww/: kk
funny_pages/gta/: gta.html
funny_pages/tree/: tree.html
includes/: CGI.hpp  ChunkedRequest.hpp  Client.hpp  HttpRequest.hpp  HttpResponse.hpp  Server.hpp  WebServer.hpp
resources/: index.html
site/: index.html
srcs/: AutoIndex.cpp  CGI.cpp  ChunkedRequest.cpp  Client.cpp  HttpRequest.cpp  HttpResponse.cpp  Parser.cpp  Server.cpp  WebServer.cpp  main.cpp
test/: Makefile  Parser.cpp  Parser.hpp  Server.cpp  Server.hpp  WebServer.cpp  WebServer.hpp  error.html  index.html  main.cpp
test/HTTP/: HttpRequest.cpp  HttpRequest.hpp  HttpResponse.cpp
test/Servers/: Server.cpp  Server.hpp  TestServer.cpp  TestServer.hpp
test/Sockets/: ASocket.cpp  ASocket.hpp  ClientSocket.cpp  ClientSocket.hpp  ServerSocket.cpp  ServerSocket.hpp
webserv.dSYM/Contents/Resources/DWARF/: webserv
